[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=2]

[node name="OptionsMenu" instance=ExtResource( 1 )]
pause_mode = 2
script = ExtResource( 2 )

[node name="Label" parent="ColorRect/VBoxContainer" index="0"]
text = "OPTIONS"

[node name="ToggleSoundButton" type="Button" parent="ColorRect/VBoxContainer" index="1"]
margin_left = 76.0
margin_top = 15.0
margin_right = 179.0
margin_bottom = 26.0
size_flags_horizontal = 4
text = "Sound Effects Off"

[node name="ToggleMusicButton" type="Button" parent="ColorRect/VBoxContainer" index="2"]
margin_left = 100.0
margin_top = 30.0
margin_right = 155.0
margin_bottom = 41.0
size_flags_horizontal = 4
text = "Music Off"

[node name="BackButton" type="Button" parent="ColorRect/VBoxContainer" index="3"]
margin_left = 114.0
margin_top = 45.0
margin_right = 142.0
margin_bottom = 56.0
size_flags_horizontal = 4
text = "Back"

[connection signal="pressed" from="ColorRect/VBoxContainer/ToggleSoundButton" to="." method="_on_ToggleSoundButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ToggleMusicButton" to="." method="_on_ToggleMusicButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
